--- a/TP-AW-MamondezRoman-main/index.html
+++ b/TP-AW-MamondezRoman-main/index.html
@@ -66,14 +66,12 @@
                 <a href="competiciones.html"><img src="img/7ddbf1e0-fc8c-427b-a5dd-bd874d83dc56.jfif" alt="foto-libertadores"></a>
             </div>
             <div class="main__card-CopaArg">
-                <h2>El camino de boca hacia los cuartos en la copa Argentina</h2>
+                <h2>El camino de boca en la copa Argentina</h2>
                 <a href="competiciones.html"><img src="img/CopaArg.jpg" alt=""></a>
             </div>
         </div>
 
-        <div class="main__calendario">
-            <img src="" alt="">
-        </div>
+        
     </main>
     <footer class="footer">
         <div class="footer__autor">
